force-app/main/default/objects/Operating_Model__c/Operating_Model__c.object-meta.xml
<CustomObject>
    <label>Operating Model</label>
    <nameField>
        <displayFormat>OM-{000}</displayFormat>
        <label>Operating Model Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operating Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>