force-app/main/default/objects/Operating_Model__c/fields/Day_of_due_date__c.field-meta.xml
<CustomField>
    <fullName>Day_of_due_date__c</fullName>
    <label>Day of due date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>