force-app/main/default/objects/Operating_Model__c/fields/Day_of_the_month__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_month__c</fullName>
    <label>Day of Generate date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>