force-app/main/default/objects/Operating_Model__c/fields/Days_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_Month__c</fullName>
    <label>Unit of Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>