force-app/main/default/objects/Operating_Model__c/fields/Operating_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Operating_Model_Name__c</fullName>
    <label>Operating Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.Monthly</fullName>
            </value>
            <value>
                <fullName>2.Bi_Monthly</fullName>
            </value>
            <value>
                <fullName>3.Quarterly</fullName>
            </value>
            <value>
                <fullName>4.Semi_Annually</fullName>
            </value>
            <value>
                <fullName>5.Annually</fullName>
            </value>
            <value>
                <fullName>6.Weekly</fullName>
            </value>
            <value>
                <fullName>2.Bi_Monthly_Branch</fullName>
            </value>
            <value>
                <fullName>3.Quarterly_Branch</fullName>
            </value>
            <value>
                <fullName>4.Semi_Annually_Branch</fullName>
            </value>
            <value>
                <fullName>5.Annually_Branch</fullName>
            </value>
            <value>
                <fullName>6.Weekly_Branch</fullName>
            </value>
            <value>
                <fullName>1.Monthly_Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>