force-app/main/default/objects/Operating_Model__c/validationRules/Day_of_Generate_date_Validation_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_of_Generate_date_Validation_Date</fullName>
    <active>true</active>
    <description>Day of generate date Must be 1 to 31 if Unit of Duration is &apos;Month&apos;
if &apos;Days&apos; must be blank</description>
    <errorConditionFormula>IF(ISPICKVAL(Days_Month__c, &quot;Days&quot;), IF(ISBLANK(Day_of_the_month__c), false, true), false)</errorConditionFormula>
    <errorDisplayField>Day_of_the_month__c</errorDisplayField>
    <errorMessage>Day of generate date Must be Blank if Unit of Duration is &apos;Days&apos;</errorMessage>
</ValidationRule>