force-app/main/default/objects/Operating_Model__c/listViews/Operating_Model_For_Branch.listView-meta.xml
<ListView>
    <fullName>Operating_Model_For_Branch</fullName>
    <columns>NAME</columns>
    <columns>Operating_Model_Name__c</columns>
    <columns>Days_Month__c</columns>
    <columns>Duration__c</columns>
    <columns>Day_of_the_month__c</columns>
    <columns>Day_of_due_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Operating_Model_Name__c</field>
        <operation>contains</operation>
        <value>Branch</value>
    </filters>
    <label>Operating_Model_For_Branch</label>
    <language>en_US</language>
</ListView>